--- a/app/src/main/res/layout/fragment_saved_media.xml
+++ b/app/src/main/res/layout/fragment_saved_media.xml
@@ -18,6 +18,6 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_margin="16dp"
-        android:text="Create Room" />
+        android:text="@string/mainMenu_savedMedia_setupRoom" />
 
 </RelativeLayout>
