--- a/app/src/main/res/layout/fragment_scan.xml
+++ b/app/src/main/res/layout/fragment_scan.xml
@@ -9,7 +9,7 @@
         android:id="@+id/scan_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Scan"
+        android:text="@string/mainMenu_scan_buttonScan"
         android:textSize="24sp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@+id/guideline"
@@ -34,16 +34,16 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:hint="UPC, ISBN or EAN"
+            android:hint="@string/mainMenu_scan_ISBNInput"
             android:ems="10"
-            android:inputType="number" />
+            android:inputType="number"/>
 
         <Button
             android:id="@+id/submit_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Submit"
-            android:layout_marginLeft="16dp"/>
+            android:text="@string/mainMenu_scan_search"
+            android:layout_marginStart="16dp"/>
 
     </LinearLayout>
 
