--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -3,13 +3,13 @@
     <item
         android:id="@+id/nav_scan"
         android:icon="@drawable/baseline_barcode_reader_24"
-        android:title="Scan"/>
+        android:title="@string/mainMenu_scan"/>
     <item
         android:id="@+id/nav_saved_media"
         android:icon="@drawable/baseline_storage_24"
-        android:title="Saved Media"/>
+        android:title="@string/mainMenu_savedMedia"/>
     <item
         android:id="@+id/nav_account"
         android:icon="@drawable/baseline_account_circle_24"
-        android:title="Account"/>
+        android:title="@string/mainMenu_account"/>
 </menu>
