--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,7 +1,6 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
     <!-- Base application theme for night mode. -->
     <style name="Base.Theme.MediaScanner" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your dark theme here. -->
         <item name="colorPrimary">@color/night_colorPrimary</item>
         <item name="colorPrimaryVariant">@color/night_colorPrimaryDark</item>
         <item name="colorSecondary">@color/night_colorAccent</item>
