--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,10 +2,15 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="colorPrimary">#3D4152</color> <!-- Lighter primary color -->
-    <color name="colorPrimaryDark">#2B2E38</color> <!-- Lighter primary dark color -->
-    <color name="colorAccent">#E6C485</color> <!-- Lighter accent color -->
-    <color name="night_colorPrimary">#3D4152</color> <!-- Lighter primary color for night mode -->
-    <color name="night_colorPrimaryDark">#2B2E38</color> <!-- Lighter primary dark color for night mode -->
-    <color name="night_colorAccent">#E6C485</color> <!-- Lighter accent color for night mode -->
+    <color name="mediumEmphasisWhite">#80FFFFFF</color>
+    <color name="colorPrimary">#2C3850</color>
+    <color name="colorPrimaryDark">@color/colorPrimary</color>
+    <color name="colorAccent">#25C98D</color>
+    <color name="night_colorPrimary">@color/colorPrimary</color>
+    <color name="night_colorPrimaryDark">@color/colorPrimary</color>
+    <color name="night_colorAccent">@color/colorAccent</color>
+    <color name="colorBottomNavBackground">@color/colorPrimary</color>
+    <color name="colorButton">@color/colorAccent</color>
+    <color name="colorTrueButton">@color/colorPrimary</color>
+    <color name="colorFalseButton">#7A453A</color>
 </resources>
