--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,11 +1,15 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
     <!-- Base application theme. -->
     <style name="Base.Theme.MediaScanner" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryVariant">@color/colorPrimaryDark</item>
         <item name="colorSecondary">@color/colorAccent</item>
+        <item name="bottomNavigationStyle">@style/BottomNavStyle</item>
     </style>
-
+    <style name="BottomNavStyle" parent="Widget.Design.BottomNavigationView">
+        <item name="android:background">@color/colorBottomNavBackground</item>
+        <item name="itemIconTint">@drawable/bottom_nav_color</item>
+        <item name="itemTextColor">@drawable/bottom_nav_color</item>
+    </style>
     <style name="Theme.MediaScanner" parent="Base.Theme.MediaScanner" />
 </resources>
