translate, make some cleaning and resolve bug during data download

--- a/app/src/main/res/layout/fragment_scan.xml
+++ b/app/src/main/res/layout/fragment_scan.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16dp">
@@ -30,7 +29,7 @@
             android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Or" />
+            android:text="@string/mainMenu_scan_ortext" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -46,7 +45,8 @@
                 android:ems="10"
                 android:gravity="center_vertical"
                 android:hint="@string/mainMenu_scan_ISBNInput"
-                android:inputType="number" />
+                android:inputType="number"
+                android:autofillHints="ISBN number for your media" />
 
             <Button
                 android:id="@+id/submit_button"
