--- a/app/src/main/res/layout/activity_requests.xml
+++ b/app/src/main/res/layout/activity_requests.xml
@@ -18,7 +18,7 @@
         android:layout_centerHorizontal="true"
         android:layout_below="@id/toolbar"
         android:layout_marginTop="16dp"
-        android:text="Requests"
+        android:text="@string/ActivityRequest_title"
         android:textSize="24sp"
         android:textStyle="bold" />
 
