--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16dp">
@@ -17,7 +16,7 @@
             android:paddingTop="9dp"
             android:paddingEnd="16dp"
             android:paddingBottom="9dp"
-            android:text="Account"
+            android:text="@string/mainMenu_account_title"
             android:textColor="@color/black"
             android:textSize="34sp"
             android:textStyle="bold"/>
@@ -33,7 +32,7 @@
             android:id="@+id/requestAccessButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Request Access"
+            android:text="@string/mainMenu_account_buttonRequestAccess"
             android:visibility="gone"
             android:layout_marginTop="16dp" />
 
@@ -52,6 +51,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="top|end"
         android:layout_margin="16dp"
-        android:src="@drawable/baseline_notification_add_24" />
+        android:src="@drawable/baseline_notification_add_24"
+        android:contentDescription="@string/mainMenu_account_requestButton" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
