--- a/app/src/main/res/layout/activity_setup_room.xml
+++ b/app/src/main/res/layout/activity_setup_room.xml
@@ -10,20 +10,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/setupRoom_roomNameEditText"
-        android:inputType="text" />
+        android:inputType="text"
+        android:autofillHints="" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal">
-
-        <Button
-            android:id="@+id/confirmRoomButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:backgroundTint="@color/colorTrueButton"
-            android:text="@string/setupRoom_createButton" />
 
         <Button
             android:id="@+id/deleteRoomButton"
@@ -32,7 +25,18 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:backgroundTint="@color/colorFalseButton"
-            android:text="@string/setupRoom_cancelButton" />
+            android:text="@string/setupRoom_cancelButton"
+            style="?android:attr/buttonBarButtonStyle" />
+
+        <Button
+            android:id="@+id/confirmRoomButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:backgroundTint="@color/colorTrueButton"
+            android:text="@string/setupRoom_createButton"
+            style="?android:attr/buttonBarButtonStyle" />
+
 
     </LinearLayout>
 
