--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -48,13 +48,13 @@
         app:layout_constraintTop_toBottomOf="@+id/password">
 
         <CheckBox
-            android:id="@+id/privacy_policy_checkbox"
+            android:id="@+id/privacyPolicyCheckbox"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp" />
 
         <TextView
-            android:id="@+id/privacy_policy_text"
+            android:id="@+id/privacyPolicyText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp" />
