--- a/app/src/main/res/layout/list_item_product.xml
+++ b/app/src/main/res/layout/list_item_product.xml
@@ -1,22 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/productLinearLayout"
-    android:layout_width="match_parent"
+<TextView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/productNameTextView"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
+    android:drawablePadding="8dp"
+    android:textSize="16sp"
+    android:paddingStart="8dp"
     android:paddingEnd="16dp"
     android:paddingBottom="16dp"
-    android:paddingStart="8dp">
-
-    <ImageView
-        android:id="@+id/productIconImageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp" />
-    <TextView
-        android:id="@+id/productNameTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="16sp" />
-
-</LinearLayout>
+    app:drawableStartCompat="@drawable/baseline_error_24" />
