--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -9,6 +9,10 @@
         android:icon="@drawable/baseline_storage_24"
         android:title="@string/mainMenu_media"/>
     <item
+        android:id="@+id/nav_search"
+        android:icon="@drawable/baseline_search_24"
+        android:title="@string/mainMenu_search"/>
+    <item
         android:id="@+id/nav_account"
         android:icon="@drawable/baseline_account_circle_24"
         android:title="@string/mainMenu_account"/>
